# openapi-snapshot

./: AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  openapi_snapshot_tool.md
spec/: refactor_lib_split.md  suggested_improvements.md
src/: cli.rs  config.rs  errors.rs  fetch.rs  lib.rs  main.rs  outline.rs  output.rs  watch.rs
tests/: cli.rs
