[package]
name = "openapi-snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.133"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
predicates = "3.1.3"
tempfile = "3.15.0"
