[package]
name = "openapi-snapshot"
version = "0.1.0"
edition = "2024"
description = "Fetch and save a minified OpenAPI JSON snapshot from a running server."
license = "MIT"
repository = "https://github.com/0xashrk/openapi-snapshot"
readme = "README.md"
keywords = ["openapi", "swagger", "snapshot", "cli", "api"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.133"

[dev-dependencies]
assert_cmd = "2.0.16"
httpmock = "0.7.0"
predicates = "3.1.3"
tempfile = "3.15.0"
