[package]
name = "openapi-snapshot"
version = "0.1.3"
edition = "2024"
description = "Fetch OpenAPI JSON from a running server. Lightweight MCP alternative for AI agents (Claude Code, Cursor, etc.)."
license = "MIT"
repository = "https://github.com/0xashrk/openapi-snapshot"
readme = "README.md"
keywords = ["openapi", "swagger", "mcp", "ai-agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.133"
ctrlc = "3.5.1"

[dev-dependencies]
assert_cmd = "2.0.16"

httpmock = "0.7.0"
predicates = "3.1.3"
tempfile = "3.15.0"


